--- a/style.css
+++ b/style.css
@@ -230,6 +230,7 @@ img{
     z-index: 1;
     margin-top: -5px;
     position: absolute;
+    background-color: red;
 }
 .pokemons__card{
     margin-left: 150px;
